--- a/spi_slave/Makefile
+++ b/spi_slave/Makefile
@@ -5,7 +5,8 @@ LD:=$(CROSS_COMPILE)ld
 obj-m = spi_s3c24xx_slave.o
 module-objs = spi_s3c24xx_slave.o
 
-KDIR = /home/rdp/work/s3c2440/linux-2.6.35/
+#KDIR = /home/rdp/work/s3c2440/linux-2.6.35/
+KDIR = /opt/Stone/linux-2.6.35
 PWD = $(shell pwd)
 default:
 	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
