--- a/spi_slave/Makefile
+++ b/spi_slave/Makefile
@@ -4,7 +4,7 @@ ARCH:=arm
 CC:=$(CROSS_COMPILE)gcc
 LD:=$(CROSS_COMPILE)ld
 obj-m = spi_s3c24xx_slave.o
-module-objs = spi_s3c24xx_slave.o
+module-objs = spi_s3c24xx_slave.o spi_s3c24xx_fiq.o
 
 #KDIR = /home/rdp/work/s3c2440/linux-2.6.35/
 KDIR = /opt/Stone/linux-2.6.35
