--- a/spi_slave/Makefile.irq
+++ b/spi_slave/Makefile.irq
@@ -5,7 +5,7 @@ CC:=$(CROSS_COMPILE)gcc
 AS:=$(CROSS_COMPILE)as
 LD:=$(CROSS_COMPILE)ld
 obj-m = module.o
-module-objs = spi_s3c24xx_fiq.o spi_s3c24xx_slave-irq.o
+module-objs = spi_s3c24xx_slave-irq.o
 
 #KDIR = /home/rdp/work/s3c2440/linux-2.6.35/
 KDIR = /opt/Stone/linux-2.6.35
