--- a/mf.config
+++ b/mf.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35
-# Sun Oct  4 16:25:07 2015
+# Mon Oct 26 06:52:16 2015
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -770,6 +770,7 @@ CONFIG_WIRELESS=y
 CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
+CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
 # CONFIG_NL80211_TESTMODE is not set
@@ -1031,7 +1032,12 @@ CONFIG_USB_ZD1201=y
 # CONFIG_B43LEGACY is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
-# CONFIG_LIBERTAS is not set
+CONFIG_LIBERTAS=y
+# CONFIG_LIBERTAS_USB is not set
+# CONFIG_LIBERTAS_SDIO is not set
+CONFIG_LIBERTAS_SPI=y
+# CONFIG_LIBERTAS_DEBUG is not set
+# CONFIG_LIBERTAS_MESH is not set
 # CONFIG_P54_COMMON is not set
 CONFIG_RT2X00=y
 CONFIG_RT2500USB=y
@@ -1253,11 +1259,11 @@ CONFIG_SPI_MASTER=y
 #
 # SPI Master Controller Drivers
 #
-CONFIG_SPI_BITBANG=m
+CONFIG_SPI_BITBANG=y
 CONFIG_SPI_GPIO=m
-CONFIG_SPI_S3C24XX=m
+CONFIG_SPI_S3C24XX=y
 CONFIG_SPI_S3C24XX_FIQ=y
-CONFIG_SPI_S3C24XX_GPIO=m
+# CONFIG_SPI_S3C24XX_GPIO is not set
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_DESIGNWARE is not set
 
@@ -1865,9 +1871,6 @@ CONFIG_SYSCTL_SYSCALL_CHECK=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
-# CONFIG_BRANCH_PROFILE_NONE is not set
-# CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
-# CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
