use logic tool to debug wifi

--- a/mf.config
+++ b/mf.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35
-# Mon Oct 26 06:52:16 2015
+# Tue Oct 27 08:30:12 2015
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -23,7 +23,6 @@ CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
-CONFIG_FIQ=y
 CONFIG_GENERIC_HARDIRQS_NO__DO_IRQ=y
 CONFIG_VECTORS_BASE=0xffff0000
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
@@ -270,6 +269,8 @@ CONFIG_S3C24XX_PWM=y
 CONFIG_S3C24XX_GPIO_EXTRA=0
 CONFIG_S3C2410_DMA=y
 # CONFIG_S3C2410_DMA_DEBUG is not set
+# CONFIG_S3C24XX_SPI_BUS0_GPE11_GPE12_GPE13 is not set
+CONFIG_S3C24XX_SPI_BUS1_GPG5_GPG6_GPG7=y
 CONFIG_MACH_SMDK=y
 
 #
@@ -1253,16 +1254,16 @@ CONFIG_HW_RANDOM=y
 # CONFIG_RAMOOPS is not set
 # CONFIG_I2C is not set
 CONFIG_SPI=y
-# CONFIG_SPI_DEBUG is not set
+CONFIG_SPI_DEBUG=y
 CONFIG_SPI_MASTER=y
 
 #
 # SPI Master Controller Drivers
 #
 CONFIG_SPI_BITBANG=y
-CONFIG_SPI_GPIO=m
+CONFIG_SPI_GPIO=y
 CONFIG_SPI_S3C24XX=y
-CONFIG_SPI_S3C24XX_FIQ=y
+# CONFIG_SPI_S3C24XX_FIQ is not set
 # CONFIG_SPI_S3C24XX_GPIO is not set
 # CONFIG_SPI_XILINX is not set
 # CONFIG_SPI_DESIGNWARE is not set
@@ -1270,8 +1271,8 @@ CONFIG_SPI_S3C24XX_FIQ=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
-CONFIG_SPI_TLE62X0=m
+CONFIG_SPI_SPIDEV=y
+# CONFIG_SPI_TLE62X0 is not set
 
 #
 # PPS support
