--- a/arch/arm/plat-s3c24xx/Kconfig
+++ b/arch/arm/plat-s3c24xx/Kconfig
@@ -108,13 +108,13 @@ config S3C2410_DMA_DEBUG
 # SPI default pin configuration code
 
 config S3C24XX_SPI_BUS0_GPE11_GPE12_GPE13
-	bool
+	bool S3C24XX_SPI_BUS0_GPE11_GPE12_GPE13
 	help
 	  SPI GPIO configuration code for BUS0 when connected to
 	  GPE11, GPE12 and GPE13.
 
 config S3C24XX_SPI_BUS1_GPG5_GPG6_GPG7
-	bool
+	bool S3C24XX_SPI_BUS1_GPG5_GPG6_GPG7
 	help
 	  SPI GPIO configuration code for BUS 1 when connected to
 	  GPG5, GPG6 and GPG7.
